# ocbrain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: AGENT_HANDOFF.md  AGENT_USE_GUIDE.md  ARCHITECTURE.md  BUILD_LOOP.md  CONTRACT.md  CORE_OPERATIONS.md  CORE_ROADMAP_EXECUTION.md  END_TO_END_BUILD_PLAN.md  HISTORICAL_INGEST.md  PLAN.md  RUNTIME_INTEGRATION.md  SHARED_CONTEXT_V1.md  ULTIMATE_GUIDE.md  V2_AUTONOMY_SPEC.md  design.md
docs/releases/: v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v1.0.0.md  v1.0.1.md  v1.1.0.md
examples/curated-memory/: README.md  manifest.json  source.md
examples/hosted-context-demo/: README.md  manifest.json  source.md
ops/: README.md  com.jonathangu.ocbrain.autopilot.heavy.plist  com.jonathangu.ocbrain.autopilot.light.plist  com.jonathangu.ocbrain.autopilot.plist  com.jonathangu.ocbrain.stallcheck.plist
ops/hooks/: pre-push
scripts/: brain-sync.sh  export-cursor-chats.py  export-hermes-transcripts.py  generate-pilot-candidates.py  grade-pilot-blind.py  install-hooks.sh  install-skills  ocbrain-mcp
skills/ocbrain/: SKILL.md
src/ocbrain/: __init__.py  autolabel.py  autopilot.py  bundle.py  classifier.py  cli.py  closeout.py  config.py  core_ops.py  core_v1.py  curation.py  db.py  egress.py  embed.py  eval.py  events.py  excerpt.py  fsutil.py  hybrid.py  ids.py  ingest.py  judge.py  loops.py  maintenance.py  mcp.py  mcp_v1.py  promote.py  proposals.py  publicsafety.py  retrieval_eval.py  retrieve.py  review.py  safeguards.py  schema.py  scope.py  shared_context.py  stallcheck.py  teacher.py  temporal.py  text.py  (+2 more)
src/ocbrain/dataset/: __init__.py  batching.py  classify.py  curate.py  export.py  grade.py  mine_dpo.py  mine_persona.py  mine_sft.py  pilot.py  quality.py  selection.py  stats.py  transcripts.py
tests/: test_archive_catalog.py  test_auto_compile_v1.py  test_autolabel.py  test_autopilot.py  test_bundle.py  test_bundle_v1.py  test_classifier.py  test_cli_v1.py  test_cli_v2.py  test_cli_v3.py  test_cli_version.py  test_config_v3.py  test_core_ops.py  test_core_v1.py  test_dataset_batching.py  test_dataset_calibration.py  test_dataset_classify.py  test_dataset_curate.py  test_dataset_export.py  test_dataset_grading.py  test_dataset_mine_budget.py  test_dataset_pilot.py  test_dataset_quality.py  test_dataset_selection.py  test_db_busy_timeout.py  test_db_flow.py  test_db_noclobber.py  test_embed.py  test_eval.py  test_events_incremental.py  test_excerpt_render.py  test_feedback.py  test_founder_signals.py  test_golden_context_v1.py  test_hybrid_v1.py  test_judge.py  test_launcher_activation.py  test_loops.py  test_mcp.py  test_mcp_schema_contract_v1.py  (+25 more)
tests/fixtures/: README.md  golden_context_v1.json
tools/: __init__.py  runtime_proof_fixture.py
