[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocbrain"
version = "0.4.0"
description = "Lightweight shared memory for ChatGPT/Codex, Claude Code, and OpenClaw"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Jonathan Gu" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
ocbrain = "ocbrain.cli:main"
ocbrain-closeout = "ocbrain.cli:main"
brain-loop-ingest = "ocbrain.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build]
# Hatch's source archive may otherwise include untracked worktree files. Keep
# every private/runtime surface out explicitly; .gitignore is defense in depth,
# not the package boundary.
exclude = [
  "/data/**",
  "/logs/**",
  "/dist/**",
  "/.venv/**",
  "/.pytest_cache/**",
  "/.ruff_cache/**",
  "/uv.lock",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
